# asr

./: .gitignore  README.md  TECHNICAL.md  asr.py  asr_whisper_v3_large.py  gemma-asr.py  parquet_file_test.py  pyproject.toml  similarity.py  whisper_large_v3_pipeline.py
scripts/: run.sh
src/whisper_asr/: __main__.py  audio.py  config.py  correct.py  evaluate.py  text.py  transcribe.py
