[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-asr"
version = "0.1.0"
description = "Persian ASR pipeline with Whisper Large-v3 + LLM correction"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "jiwer>=3.0.0",
    "rapidfuzz>=3.0.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "langchain-ollama>=0.1.0",
    "hazm>=0.9.0",
]

[project.scripts]
whisper-asr = "whisper_asr.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
